MGNLUI-1886 Removed several position:relative rules in order to avoid unnecessary z-index stacks.

--- a/magnolia-ui-vaadin-widgetset/src/main/resources/VAADIN/themes/admincentraltheme/form.scss
+++ b/magnolia-ui-vaadin-widgetset/src/main/resources/VAADIN/themes/admincentraltheme/form.scss
@@ -296,4 +296,27 @@ fieldset {
   text-align: center;
 }
 
+.textarea-expander {
+  cursor: pointer;
+  display: inline-block;
+}
+
+.textarea-expander.stretched {
+  position: absolute;
+  right: 5px;
+  top: 5px;
+}
+
+.textarea-expander.collapsed {
+  position: relative;
+  vertical-align: top;
+  right: 15px;
+  margin-right: -15px;
+  top: 0;
+  width: 16px;
+  height: 16px;
+}
+
+
+
 }
